{
    "name": "GameInput",
    "maps": [
        {
            "name": "Player",
            "id": "cce6b83c-533e-4d15-b52f-6e5227ad1239",
            "actions": [
                {
                    "name": "TogglePause",
                    "type": "Button",
                    "id": "b3b39394-3d1f-47d9-aff0-5f3e826d266c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9ad4e605-eb8d-4aa8-994f-62154554545f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5ef296f-403d-4c89-8f86-4a6a93021879",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}